# fast-api-challenge

./: README.md  data.db  propreties.py  pyproject.toml
app/: __init__.py  base_models.py  main.py  utils.py
app/database/: __init__.py  models.py
src/: database.py  main.py  models.py
test/: test_items.py  test_orders.py
