[tool.poetry]
name = "fast-api-challenge"
version = "0.1.0"
description = ""
authors = ["leonardodma <leonardodma@al.insper.edu.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
